--- a/caber-gateway/src/main/resources/application.yaml
+++ b/caber-gateway/src/main/resources/application.yaml
@@ -7,6 +7,14 @@ spring:
       discovery:
         server-addr: 114.132.198.119:8848
         password: nacos
+    gateway:
+      routes:
+        - id: goods
+          uri: http://localhost:8081
+          predicates:
+            - Path=/goods/**
+          filters:
+
   application:
     name: gateway
 
