--- a/caber-goods/pom.xml
+++ b/caber-goods/pom.xml
@@ -15,6 +15,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>cn.caber</groupId>
+			<artifactId>caber-commons</artifactId>
+			<version>${revision}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
 		</dependency>
