--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <lombok.version>1.18.12</lombok.version>
         <mybatis.version>3.5.6</mybatis.version>
         <mybatisplus.version>3.4.1</mybatisplus.version>
+        <fastjson.version>2.0.40</fastjson.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -110,7 +111,7 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
-                <version>2.0.40</version>
+                <version>${fastjson.version}</version>
             </dependency>
 
         </dependencies>
