--- a/caber-order/pom.xml
+++ b/caber-order/pom.xml
@@ -13,7 +13,11 @@
     <description>caber-order</description>
     <dependencies>
 
-
+        <dependency>
+            <groupId>cn.caber</groupId>
+            <artifactId>caber-commons</artifactId>
+            <version>${revision}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
@@ -55,6 +59,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
