--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
                 <version>${fastjson.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>transmittable-thread-local</artifactId>
+                <version>2.14.2</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
