--- a/caber-gateway/src/main/resources/application.yaml
+++ b/caber-gateway/src/main/resources/application.yaml
@@ -1,7 +1,9 @@
 server:
-  port: 8080
+  port: 80
 
 spring:
+  application:
+    name: gateway
   cloud:
     nacos:
       discovery:
@@ -22,7 +24,10 @@ spring:
     loadbalancer:
       cache:
         enabled: true
-
-  application:
-    name: gateway
-
+  zipkin:
+    base-url: http://localhost:9411/ # 服务端地址
+    sender:
+      type: web                      # 数据传输方式，web 表示以 HTTP 报文的形式向服务端发送数据
+  sleuth:
+    sampler:
+      probability: 1.0
