--- a/caber-user/src/main/resources/application.yaml
+++ b/caber-user/src/main/resources/application.yaml
@@ -1,16 +1,16 @@
-server:
-  port: 8082
-  servlet:
-    context-path: /goods
 
+server:
+  port: 8083
+  servlet:
+    context-path: /user
 spring:
-  application:
-    name: goods
   cloud:
     nacos:
       discovery:
         server-addr: 114.132.198.119:8848
         password: nacos
+  application:
+    name: user
   zipkin:
     base-url: http://localhost:9411/ # 服务端地址
     sender:
