--- a/caber-gateway/src/main/resources/application.yaml
+++ b/caber-gateway/src/main/resources/application.yaml
@@ -21,6 +21,11 @@ spring:
           predicates:
             - Path=/order/**
           filters:
+        - id: user
+          uri: lb://user
+          predicates:
+            - Path=/user/**
+          filters:
     loadbalancer:
       cache:
         enabled: true
