--- a/caber-point/pom.xml
+++ b/caber-point/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>caber-user</artifactId>
+    <artifactId>caber-point</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -27,7 +27,6 @@
             <artifactId>caber-feign-client</artifactId>
             <version>${revision}</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -47,18 +46,9 @@
         <dependency>
             <groupId>cn.caber.commons</groupId>
             <artifactId>caber-commons-mq-starter</artifactId>
-           <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
