--- a/caber-point/src/main/resources/application.yaml
+++ b/caber-point/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 
 server:
-  port: 8083
+  port: 8084
   servlet:
-    context-path: /user
+    context-path: /point
 spring:
   cloud:
     nacos:
@@ -10,7 +10,7 @@ spring:
         server-addr: 114.132.198.119:8848
         password: nacos
   application:
-    name: user
+    name: point
   zipkin:
     base-url: http://localhost:9411/ # 服务端地址
     sender:
@@ -23,3 +23,5 @@ rocketmq:
   name-server: 114.132.198.119:9876
   producer:
     group: test-producer-group
+  consumer:
+    group: SpringBoot_Group
